--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -20,6 +20,6 @@
       src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"
       integrity="sha256-nMn34BfOxpKD0GwV5nZMwdS4e8SI8Ekz+G7dLeGE4XY="
     ></script>
-    <script src="/js/1-gallery.js" type="module"></script>
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
